fix navbar on mobile

--- a/src/style/nav.less
+++ b/src/style/nav.less
@@ -1,6 +1,6 @@
 .Nav {
 	text-align: left;
-	.logo {
+	&-Logo {
 		width: 50px;
 		display: inline-block;
 	}
@@ -8,17 +8,21 @@
 		&-Mobile {
 			display: block;
 			float: right;
+			text-align: center;
 			color: @color_primary;
-			font-size: 120%;
+			font-size: 150%;
 			&-Toggle, &-Close {
 				display: block;
 				float: right;
 				margin: 15px 0;
+				transition: opacity .4s;
 			}
 			&-Close {
 				display: none;
 			}
 			&-List {
+				transition: opacity .4s;
+				opacity: 0;
 				position: absolute;
 				right: 0;
 				width: 100%;
@@ -33,8 +37,9 @@
 				&-Item {
 					position: relative;
 					text-align: center;
-					padding: 5px;
-					margin: 10px 5px;
+					display: inline-block;
+					padding: 10px;
+					margin: 0;
 					color: lighten(@color_primary, 20%);
 					transition: color .4s;
 					overflow: hidden;
