--- a/src/style/utilities.less
+++ b/src/style/utilities.less
@@ -1,6 +1,8 @@
 .Display--block {
 	display: block !important;
+	opacity: 1 !important;
 }
 .Display--none {
 	display: none !important;
+	opacity: 0 !important;
 }
